<resources>
    <string name="app_name">Qpay</string>
    <string name="basic_image">images</string>
    <string name="str_thomas_shelby">Thomas Shelby</string>
    <string name="str_wallet_balance">Wallet balance</string>
    <string name="str_amount"> 2,36,000.47</string>
    <string name="str_add_more">Add more</string>
    <string name="ic_receive_money_in">Receive money in</string>
    <string name="ic_qpay_id">8778214386@qpay</string>
    <string name="str_card_number">xxx xx 8658</string>
    <string name="str_state_bank_of_india">State Bank of India</string>
    <string name="str_manage">Manage</string>
    <string name="str_bank_accounts">Bank Accounts</string>
    <string name="str_primary">Primary</string>
    <string name="ic_8_digit">xxxx 3941</string>
    <string name="str_check_balance">Check Balance</string>
    <string name="str_add_new_bank_account">Add New Bank Account</string>
    <string name="str_security_amp_protection"><![CDATA[Security & Protection]]></string>
    <string name="str_screen_lock">Screen lock</string>
    <string name="str_biometric_amp_screen_locks"><![CDATA[Biometric & Screen Locks]]></string>
    <string name="str_change_password">Change password</string>
    <string name="str_reset_your_app_password">Reset your app password</string>
    <string name="str_settings_amp_preferences"><![CDATA[Settings & Preferences]]></string>
    <string name="str_choose_language_english">Choose language: English</string>
    <string name="str_permissions">Permissions</string>
    <string name="str_manage_data_sharing_settings">Manage data sharing settings</string>
    <string name="str_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="str_help">Help</string>
    <string name="str_report_fraud">Report fraud</string>
    <string name="str_privacy_policy">Privacy policy</string>
    <string name="str_languages">Languages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_bank">Bank</string>
    <string name="str_log_out">Log Out</string>
    <string name="str_history">History</string>
    <string name="str_search">Search</string>
    <string name="str_download_statement">Download statement</string>
    <string name="str_filter_payments">Filter payments</string>
    <string name="str_payment_source">Payment source</string>
    <string name="str_qpay_wallet">Qpay Wallet</string>
    <string name="str_united_bank_of_india_5221">United Bank of India - 5221</string>
    <string name="str_sbi_3941">SBI - 3941</string>
    <string name="str_bank_of_baroda_4989">Bank of Baroda - 4989</string>
    <string name="str_status">Status</string>
    <string name="str_successful">Successful</string>
    <string name="str_failed">Failed</string>
    <string name="str_pending">Pending</string>
    <string name="str_type">Type</string>
    <string name="str_paid">Paid</string>
    <string name="str_received">Received</string>
    <string name="str_self_transfer">SelfTransfer</string>
    <string name="str_name_amount">Amount</string>
    <string name="str_min_amount">Min Amount</string>
    <string name="str_max_amount">MaxAmount</string>
    <string name="str_date_range">Date range</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_last_1_month">Last 1 month</string>
    <string name="str_last_3_months">Last 3 months</string>
    <string name="str_last_6_months">Last 6 months</string>
    <string name="str_last_1_year">Last 1 year</string>
    <string name="str_clear_all">Clear all</string>
    <string name="str_apply">Apply</string>
    <string name="str_ibrahim_mohammedali">Ibrahim Mohammedali</string>
    <string name="str_8778214386_qpay">8778214386@qpay</string>
    <string name="str_processing_payment_of">Processing payment of</string>
    <string name="str_note_do_not_press_back_or_close_the_app">Note: Do not press back or close the app</string>
    <string name="str_view_details">View details</string>
    <string name="str_share_receipt">Share receipt</string>
    <string name="str_paid_to">Paid to</string>

</resources>