<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uiCvProfileView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/uiCvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/uiIvImages"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/basic_image"
                android:scaleType="centerCrop"
                android:src="@drawable/basic" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uiTvSenderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:drawableEnd="@drawable/ic_green_tick"
            android:drawablePadding="4dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/str_ibrahim_mohammedali"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uiCvImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uiTvSenderUpiId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/str_8778214386_qpay"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uiTvSenderName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiCvProfileView"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/customCircularProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Circular ProgressBar -->
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/uiCircularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                app:indicatorColor="@color/color_green"
                app:indicatorSize="80dp"
                app:strokeWidth="4dp"
                app:trackColor="@color/black" />

            <!-- ImageView in the center -->
            <ImageView
                android:id="@+id/imageInsideProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ic_history" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uiTvProcessingPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/str_processing_payment_of"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customCircularProgressBar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uiTvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableStart="@drawable/inr_sympol"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/str_amount"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            app:drawableTint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uiTvProcessingPayment" />


        <!-- TextView inside CircularProgressIndicator -->
        <!-- <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/uiCircularProgressBar"
             android:layout_width="48dp"
             android:layout_height="49dp"
             app:indeterminate="true"
             app:indicatorColor="@color/light_green_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:trackColor="@color/light_grey5"
             app:trackThickness="10dp" />

         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/info_icons"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/uiCircularProgressBar"
             app:layout_constraintEnd_toEndOf="@id/uiCircularProgressBar"
             app:layout_constraintHorizontal_bias="0.531"
             app:layout_constraintStart_toStartOf="@id/uiCircularProgressBar"
             app:layout_constraintTop_toTopOf="@id/uiCircularProgressBar" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:drawableStart="@drawable/ic_warnings"
            android:drawablePadding="6dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/str_note_do_not_press_back_or_close_the_app"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>